--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/gdsctime?userSSL=false&useUnic
 spring.datasource.username=root
 spring.datasource.password=28782821
 spring.jpa.show-sql=true
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
