--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/gdsctime?userSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://gdsc-yubin.cmujljjoejjx.us-east-2.rds.amazonaws.com/gdsctime?userSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.username=admin
 spring.datasource.password=28782821
 spring.jpa.show-sql=true
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jackson.property-naming-strategy=SNAKE_CASE
